fix: remove padding-left override so container padding applies on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -163,8 +163,7 @@ p {
     }
 
     p, .section-label {
-        margin-left: 0 !important;
-        padding-left: 0 !important;
+        margin-left: 0;
     }
 
     .btn {
